- fixed: pressing F8 in the console would remove input focus from the console
- pressing tab changes focus while in a single line text input field
- fix several small problems with detached windows
- fix a problem with keeping the list of objects up to date
- improvements to spinbox: step size is adjusted dynamically, and no arbitrary limits in real mode
- fixed problem with specifying y axis limits in several plugins
- simplified CSV import plugin
- new plugin: import SPSS files
- new documentation pages: console
- improvements to distribution plot plugins
- new plugins: distribution plots 							TODO: list them
- fixed: installing packages as root would not work, when $R_HOME is not defined
- new plugin element to select name of an R object to save to
- analysis folder for analysis plugins (Wilcoxon and Ansari-Bradley tests moved to analysis)
- new plugin: Ansari-Bradley two-sample test						TODO: document, make it stable
- place internal objects .rk.rkreply and .rk.available.packages.cache into rkward package environment
- support for preview functionality in graphing plugins
- new plugin: barplot
- new plugin: export contents of an X11 device to several different file formats
- plugins can now be context sensitive (e.g. work on a particular x11 device)
- new plugin: Wilcoxon Rank Sum test and Wilcoxon Exact Rank Sum test			TODO: document, make it stable
- new plugin: scatterplot matrix
- new plugin: correlation matrix plot
- safer destruction of R backend on quitting
- fix compilation for the upcoming R 2.5.0		TODO: check again
							TODO: update debian dependencies:
							- the old depends + :
							- if compiled with R < 2.4.0: dependes r-base-core < 2.4.0
							- if compiled with R 2.4.0 or greater: dependes r-base-core >= 2.4.0
							- if compiled with R 2.5.0 or greater: dependes r-base-core >= 2.5.0 (or pre-versions!)
- show full error message for syntax errors (only if compiled with R 2.4.0 or newer)