@@ -1,3 +1,4 @@
+- support for calculating p-values in correlation matrix plugin
 - fixed: pressing F8 in the console would remove input focus from the console
 - pressing tab changes focus while in a single line text input field
 - fix several small problems with detached windows
